--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "express-app",
+  "name": "mongodb",
   "version": "1.0.0",
-  "description": "A simple Express app",
-  "main": "app.js",
+  "description": "",
+  "main": "app.mjs",
   "scripts": {
-    "start": "node app.mjs"
+    "start": "node app.mjs",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
